Fix overflow display issue

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 3px;
+  overflow: auto;
 }
 
 .eval,
